--- a/manifest.json
+++ b/manifest.json
@@ -2,29 +2,24 @@
   "manifest_version": 2,
   "name": "Anki-add",
   "version": "1.0",
-
   "description": "Makes it easier to add japanese words directly in to anki.",
   "homepage_url": "https://github.com/Bluskyo/Anki-Add",
-
   "icons": {
     "48": "icons/anki-Add-Icon.svg"
   },
-
   "browser_action": {
       "default_icon": "icons/anki-Add-Icon.svg",
       "default_title": "Anki-add",
       "default_popup": "popup/info.html"
   },
-
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*", "file:///*"],
       "js": ["ankiAdd.js"]
     }
   ],
-  
   "permissions": ["activeTab", "storage", "tabs"],
-  
-  "background": { "scripts": ["background.js"], "persistent": false }
+  "background": { "scripts": ["background.js"], "persistent": false },
+  "web_accessible_resources": ["data/jmdict-eng-3.6.1.json"]
 
 }
