--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Anki-add",
+  "name": "Anki-Add",
   "version": "1.0",
   "description": "Makes it easier to add japanese words directly in to anki.",
   "homepage_url": "https://github.com/Bluskyo/Anki-Add",
@@ -19,8 +19,11 @@
     }
   ],
   "permissions": ["activeTab", "storage", "tabs"],
-  "background": { "scripts": ["background.js"], "persistent": true },
-  "web_accessible_resources": ["data/jmdict-eng-3.6.1.json"],
+  "background": { 
+    "scripts": ["background.js"], 
+    "persistent": true 
+  },
+  "web_accessible_resources": ["data/jmdictExtended.json"],
 
   "commands": {
     "_execute_browser_action": {
