--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Anki-Add",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Makes it easier to add japanese words directly in to anki.",
   "homepage_url": "https://github.com/Bluskyo/Anki-Add",
   "icons": {
@@ -27,12 +27,13 @@
     "libs/fflate.min.js",
     "data/jmdictExtended.json.zip"
   ],
-
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+Q"
-      }
+        "default": "Ctrl+Q",
+        "linux": "Ctrl+Shift+Q"
+      },
+      "description": "Open popup window."
     }
   }
 
